# hardware-agnostic-raytracer

./: CMakeLists.txt  gi.css  gi.html  readme.md
src/: main.cpp  web_socket_server.hpp
src/gi/: camera.cpp  camera.hpp  frame_buffer.hpp  light.hpp  material.hpp  ray.hpp  renderer.hpp  util.hpp
src/gi/object/: sphere.hpp  triangle.hpp
src_backup/: application.hpp  main.cpp  web_socket_server.hpp
src_backup/gi/: camera.cpp  camera.hpp  frame_buffer.hpp  light.hpp  material.hpp  ray.hpp  renderer.hpp  util.hpp
src_backup/gi/object/: renderable_object.hpp  triangle.hpp
web/: index.html  index.js
